Project

General

Profile

Actions

Bug #13392

closed

TracePoint return event location is incorrect for methods defined with define_method

Bug #13392: TracePoint return event location is incorrect for methods defined with define_method

Added by areman01 (André Kullmann) over 9 years ago. Updated almost 5 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.4.1p111 (2017-03-22 revision 58053) [x86_64-linux]
[ruby-core:80515]

Description

Command

ruby tracepoint_bug.rb

Output

ruby-2.4.1-p111 (x86_64-linux)
tracepoint_bug_ext.rb:4 call to_s
tracepoint_bug_ext.rb:5 c_call to_s
tracepoint_bug_ext.rb:5 c_return to_s
racepoint_bug.rb:12 return to_s

Why the call event on to_s is in file tracepoint_bug_ext.rb and the return event in file tracepoint_bug.rb? I think it's a bug. In jruby, for example, the call and the return event are both fired in the tracepoint_bug_ext.rb file.


Files

tracepoint_bug.rb (495 Bytes) tracepoint_bug.rb areman01 (André Kullmann), 03/31/2017 08:26 PM
tracepoint_bug_ext.rb (126 Bytes) tracepoint_bug_ext.rb areman01 (André Kullmann), 03/31/2017 08:26 PM

Related issues 1 (0 open — 1 closed)

Related to Ruby - Bug #14817: TracePoint#parameters for bmethod's return event should return the same value as its Method#parametersClosedko1 (Koichi Sasada)Actions
Actions

Also available in: PDF Atom