Fix the tracepoint return location for bmethods

Previously, the bmethod return hook was called after the VM frame
for the bmethod was popped, resulting in the location of the return
event being the caller location instead of the return location inside
the callee.

Fix this by extracting an invoke_bmethod_return_hooks function and
calling that  inside the leave instruction handling if the frame is a
bmethod frame, before the call to vm_pop_frame. Also call it inside
vm_exec_handle_exception to handle explicit returns inside bmethods.

Fixes [Bug #13392]